# tsar

./: .appveyor.yml  .clang-format  .travis.yml  CMakeLists.txt  README.md
doc/: lists.md
include/tsar/: assert.hpp  cat.hpp  compiler_support.hpp  context_aware_tuple.hpp  cts.hpp  field.hpp  list.hpp  log_search.hpp  observable.hpp  st.hpp  standard_storage.hpp  standard_tuple.hpp  tsar.hpp  typesort.hpp  typewrap.hpp  typewrap_literals.hpp
include/tsar/detail/: named_mapping.hpp  packed_ptr.hpp
include/tsar/observable/: observable.hpp  observer_registry.hpp
test/: CMakeLists.txt  cat_test.cxx  catch.hpp  context_aware_tuple_test.cxx  cts_test.cxx  field_test.cxx  list_test.cxx  log_search_test.cxx  observable_test.cxx  packed_ptr_test.cxx  standard_tuple_test.cxx  test_typesort.cxx  typesort_test.cxx  typewrap_test.cxx
test/field_failure/: CMakeLists.txt  constructor_decltype_a.cxx
